--- a/osp7_installer/ansible/roles/osp-overcloud/tasks/main.yml
+++ b/osp7_installer/ansible/roles/osp-overcloud/tasks/main.yml
@@ -4,75 +4,73 @@
   sudo_user: stack
   file: path=/home/stack/templates state=directory mode=0755
 
-- name: Check existing heat templates
-  stat: path=/home/stack/templates/nic-configs
-  register: nic_templates
+#- name: Check existing heat templates
+#  stat: path=/home/stack/templates/nic-configs
+#  register: nic_templates
+#
+#- name: Copy default heat templates
+#  sudo_user: stack
+#  shell: cp -r /usr/share/openstack-tripleo-heat-templates/network/config/single-nic-vlans /home/stack/templates/nic-configs
+#  when: nic_templates.stat.isdir is not defined
 
-- name: Copy default heat templates
-  sudo_user: stack
-  shell: cp -r /usr/share/openstack-tripleo-heat-templates/network/config/single-nic-vlans /home/stack/templates/nic-configs
-  when: nic_templates.stat.isdir is not defined
-
-- name:  Write {{ item.template_file }}
-  template: src={{ item.template_file }} dest=/home/stack/templates/nic-configs/{{ item.template_file }} owner=stack group=stack
-  with_items:
-    - { template_file: 'controller.yaml' }
-    - { template_file: 'compute.yaml' }
+#- name:  Write {{ item.template_file }}
+#  template: src={{ item.template_file }} dest=/home/stack/templates/nic-configs/{{ item.template_file }} owner=stack group=stack
+#  with_items:
+#    - { template_file: 'controller.yaml' }
+#    - { template_file: 'compute.yaml' }
 
 - name:  Write {{ item.template_file }}
   template: src={{ item.template_file }} dest=/home/stack/templates/{{ item.template_file }} owner=stack group=stack
   with_items:
-    - { template_file: 'network-environment.yaml' }
+#    - { template_file: 'network-environment.yaml' }
     - { template_file: 'networking-cisco-environment.yaml' }
 
-###
-# Heat Review
-###
-- name: Check if heat review checked out
-  stat: path=/home/stack/heat-review
-  register: heat_review
-
-- name: Checkout heat review 1
-  sudo_user: stack
-  shell: >
-        mkdir -p /home/stack/heat-review &&
-        mkdir /home/stack/heat-review/1 &&
-        cd /home/stack/heat-review/1 &&
-        git init &&
-        git fetch https://review.openstack.org/openstack/tripleo-heat-templates {{ heat_templates_ref_1 }} &&
-        git checkout FETCH_HEAD &&
-        git format-patch -n HEAD^ --no-prefix --stdout > /home/stack/heat-review-1.patch
-  when: heat_review.stat.isdir is not defined
-
-# just copying and pasting, this should be very short lived, though if we have a thrid, then we need to use a with_items
-- name: Checkout heat review 2
-  sudo_user: stack
-  shell: >
-        mkdir -p /home/stack/heat-review &&
-        mkdir /home/stack/heat-review/2 &&
-        cd /home/stack/heat-review/2 &&
-        git init &&
-        git fetch https://review.openstack.org/openstack/tripleo-heat-templates {{ heat_templates_ref_2 }} &&
-        git checkout FETCH_HEAD &&
-        git format-patch -n HEAD^ --no-prefix --stdout > /home/stack/heat-review-2.patch
-  when: heat_review.stat.isdir is not defined
-
-- name: Check for heat backup
-  stat: path=/usr/share/openstack-tripleo-heat-templates.bak
-  register: heat_backup
-
-- name: Backup heat templates
-  shell: cp -R /usr/share/openstack-tripleo-heat-templates /usr/share/openstack-tripleo-heat-templates.bak
-  register: template_backup
-  when: heat_backup.stat.isdir is not defined
-
-- name: Patch heat templates
-  shell: cd /usr/share/openstack-tripleo-heat-templates && patch -p0 < /home/stack/{{ item.patch_file }}
-  with_items:
-    - { patch_file: 'heat-review-1.patch' }
-    - { patch_file: 'heat-review-2.patch' }
-  when: not template_backup|skipped
-
+####
+## Heat Review
+####
+#- name: Check if heat review checked out
+#  stat: path=/home/stack/heat-review
+#  register: heat_review
+#
+#- name: Checkout heat review patches
+#  sudo_user: stack
+#  shell: >
+#        mkdir -p /home/stack/heat-review &&
+#        mkdir /home/stack/heat-review/{{ item.number }} &&
+#        cd /home/stack/heat-review/{{ item.number }} &&
+#        git init &&
+#        git fetch https://review.openstack.org/openstack/tripleo-heat-templates {{ item.ref }} &&
+#        git checkout FETCH_HEAD &&
+#        git format-patch -n HEAD^ --no-prefix --stdout > /home/stack/{{ item.patch_file }}
+#  with_items:
+#    - { number: "1", patch_file: 'heat-review-1.patch', ref: "{{ heat_templates_ref_1 }}" }
+#    - { number: "2", patch_file: 'heat-review-2.patch', ref: "{{ heat_templates_ref_2 }}" }
+#    - { number: "3", patch_file: 'heat-review-3.patch', ref: "{{ heat_templates_ref_3 }}" }
+#    - { number: "4", patch_file: 'heat-review-4.patch', ref: "{{ heat_templates_ref_4 }}" }
+#  when: heat_review.stat.isdir is not defined
+#
+#- name:  Write heat-hack.patch
+#  template: src=heat-hack.patch dest=/home/stack/heat-hack.patch owner=stack group=stack
+#
+#- name: Check for heat backup
+#  stat: path=/usr/share/openstack-tripleo-heat-templates.bak
+#  register: heat_backup
+#
+#- name: Backup heat templates
+#  shell: cp -R /usr/share/openstack-tripleo-heat-templates /usr/share/openstack-tripleo-heat-templates.bak
+#  register: template_backup
+#  when: heat_backup.stat.isdir is not defined
+#
+#- name: Patch heat templates
+#  shell: cd /usr/share/openstack-tripleo-heat-templates && patch -p0 < /home/stack/{{ item.patch_file }}
+#  with_items:
+#    - { patch_file: 'heat-review-1.patch' }
+#    - { patch_file: 'heat-review-2.patch' }
+#    - { patch_file: 'heat-review-3.patch' }
+#    - { patch_file: 'heat-review-4.patch' }
+#    - { patch_file: 'heat-hack.patch' }
+#  when: not template_backup|skipped
+#
 
 ###
 # Deploy Overcloud
@@ -97,8 +95,6 @@
         --swift-storage-scale {{ overcloud_swift_storage_scale }}
         --neutron-network-type vlan
         --neutron-disable-tunneling
-        --control-flavor control
-        --compute-flavor compute
         --neutron-public-interface {{ neutron_public_nic }}
         --hypervisor-neutron-public-interface {{ hypervisor_neutron_public_nic }}
         -e /usr/share/openstack-tripleo-heat-templates/overcloud-resource-registry-puppet.yaml
