--- a/osp7_installer/ansible/roles/osp-prep-for-overcloud/tasks/main.yml
+++ b/osp7_installer/ansible/roles/osp-prep-for-overcloud/tasks/main.yml
@@ -121,6 +121,7 @@
   when: not flavor_baremetal_create|skipped
 
 
+# TODO: remove the to end of file
 - name: Check for control flavor
   sudo_user: stack
   shell: source /home/stack/stackrc &&  openstack flavor list | grep -q control
