--- a/osp7_installer/conf_common/base.conf
+++ b/osp7_installer/conf_common/base.conf
@@ -4,12 +4,22 @@ skip = False
 #example step, used for printing vars
 [example]
 
+[switch_config]
+
 [cobbler]
 
+[rhel_unregister]
+playbook = rhel-unregister.yml
+
 [ansible]
+playbook = osp-director.yml
+
+node_discovery = true
+deploy_overcloud = true
+deploy_undercloud = true
+override_qcow = true
+
 osp_use_partner_repo = false
-skip_discovery = false
-skip_deploy_overcloud = false
 
 proxy_env = {}
 
@@ -19,15 +29,9 @@ mirror_base = http://memory.cisco.com/osp7
 image_base_url = http://memory.cisco.com/osp7/rh-images/7.0-ga
 
 yum_timeout = 120
-;yum_repos = [{ 'name': 'RH7-RHOS-7.0-director.repo', 'url': '%(ftp_base)s/director-Beta-2/RH7-RHOS-7.0-director.repo' },
-;            { 'name': 'RH7-RHOS-7.0.repo', 'url': '%(ftp_base)s/7.0-RC-2/RH7-RHOS-7.0.repo' } ]
 
 yum_repos = [{ 'name': 'RH7-RHOS-7.0-director.repo', 'url': '%(mirror_base)s/ftp-mirror/RH7-RHOS-7.0-director/RH7-RHOS-7.0-director.repo' },
             { 'name': 'RH7-RHOS-7.0.repo', 'url': '%(mirror_base)s/ftp-mirror/RH7-RHOS-7.0//RH7-RHOS-7.0.repo' } ]
-
-;disk_images = [{ 'url': '%(ftp_base)s/director-Beta-2/images/deploy-ramdisk-ironic.tar', 'name': 'deploy-ramdisk-ironic.tar' },
-;              { 'url': '%(ftp_base)s/director-Beta-2/images/discovery-ramdisk.tar', 'name': 'discovery-ramdisk.tar' },
-;              { 'url': '%(ftp_base)s/director-Beta-2/images/overcloud-full.tar', 'name': 'overcloud-full.tar' }]
 
 disk_images = [{ 'url': '%(image_base_url)s/deploy-ramdisk-ironic-7.0.0-32.tar', 'name': 'deploy-ramdisk-ironic.tar' },
               { 'url': '%(image_base_url)s/discovery-ramdisk-7.0.0-32.tar', 'name': 'discovery-ramdisk.tar' },
@@ -47,3 +51,62 @@ dns_server_1 = 171.70.168.183
 
 neutron_mechanism_drivers = openvswitch,cisco_nexus
 
+# heat patches for undercloud
+# TODO clean up: using a mix of git patches and RPM's
+networking_cisco_rpm_url = http://memory.cisco.com/osp7/rpms/rh/python-networking-cisco-2015.1.0-2.el7ost.noarch.rpm
+ucs_sdk_rpm_url = http://memory.cisco.com/osp7/rpms/rh/python-UcsSdk-0.8.2.5-1.el7ost.noarch.rpm
+tripleo_heat_rpm_url = http://memory.cisco.com/osp7/rpms/rh/openstack-tripleo-heat-templates-0.8.6-46.el7ost.noarch.rpm
+
+puppet_neutron_ref = refs/changes/81/197181/17
+
+heat_templates_ref_1 = refs/changes/54/198754/12
+# https://review.openstack.org/#/c/198754
+heat_templates_ref_2 = refs/changes/49/214649/3
+# https://review.openstack.org/#/c/214649
+heat_templates_ref_3 = refs/changes/94/215694/6
+# https://review.openstack.org/#/c/215694
+heat_templates_ref_4 = refs/changes/40/214740/10
+# https://review.openstack.org/#/c/214740
+
+
+puppet_elements_ref = refs/changes/72/188772/1
+
+# RPMs for overcloud-full.qcow2
+rpm_base_url = http://memory.cisco.com/osp7/rpms/rh
+;rpms_for_image = "%(rpm_base_url)s/python-UcsSdk-0.8.2.5-1.el7ost.noarch.rpm" \
+;                 "%(rpm_base_url)s/python-lxml-3.2.1-5.el7_1.x86_64.rpm" \
+;                 "%(rpm_base_url)s/openstack-puppet-modules-2015.1.8-12.el7ost.noarch.rpm" \
+;                 "%(rpm_base_url)s/openstack-tripleo-puppet-elements-0.0.1-5.el7ost.noarch.rpm" \
+;                 "%(rpm_base_url)s/python-networking-cisco-2015.1.0-2.el7ost.noarch.rpm"
+
+rpms_for_image = "%(rpm_base_url)s/python-UcsSdk-0.8.2.5-1.el7ost.noarch.rpm" \
+                 "%(rpm_base_url)s/python-networking-cisco-2015.1.0-2.el7ost.noarch.rpm" \
+                 "%(rpm_base_url)s/openstack-puppet-modules-2015.1.8-14.el7ost.noarch.rpm"
+
+;                 "%(rpm_base_url)s/python-lxml-3.2.1-5.el7_1.x86_64.rpm" \
+
+# default heat config
+network_ucsm_ip = 127.0.0.1
+network_ucsm_username = admin
+network_ucsm_password = password
+network_ucsm_host_list = host1:profile1, host2:profile2
+network_nexus_config = {}
+network_nexus_managed_physical_network = datacentre
+network_nexus_vlan_name_prefix = q-
+network_nexus_svi_round_robin = false
+network_nexus_provider_vlan_name_prefix = p-
+network_nexus_persistent_switch_config = false
+network_nexus_switch_heartbeat_time = 0
+network_nexus_switch_replay_count = 3
+network_nexus_provider_vlan_auto_create = true
+network_nexus_rovider_vlan_auto_trunk = true
+network_nexus_vxlan_global_config = true
+network_nexus_host_key_checks = false
+
+# which nic to use on the overcloud
+single_nic = eth0
+compute_bridge_nic = %(single_nic)s
+controller_external_nic = %(single_nic)s
+controller_internal_nic = %(single_nic)s
+neutron_public_nic = %(single_nic)s
+hypervisor_neutron_public_nic = %(single_nic)s
