--- a/osp7_installer/ansible/roles/osp-overcloud/templates/networking-cisco-environment.yaml
+++ b/osp7_installer/ansible/roles/osp-overcloud/templates/networking-cisco-environment.yaml
@@ -1,6 +1,5 @@
 resource_registry:
-  OS::TripleO::ControllerExtraConfigPre: /usr/share/openstack-tripleo-heat-templates/puppet/extraconfig/pre_deploy/controller/network-cisco.yaml
-  #OS::TripleO::AllNodesExtraConfig: /usr/share/openstack-tripleo-heat-templates/extraconfig/all_nodes/mac_hostname.yaml
+  OS::TripleO::AllNodesExtraConfig: /usr/share/openstack-tripleo-heat-templates/puppet/extraconfig/all_nodes/network-cisco.yaml
 
 parameter_defaults:
   NetworkUCSMIp: '{{ network_ucsm_ip }}'
@@ -20,12 +19,8 @@ parameter_defaults:
   NetworkNexusProviderVlanAutoTrunk: '{{ network_nexus_rovider_vlan_auto_trunk|to_json }}'
   NetworkNexusVxlanGlobalConfig: '{{ network_nexus_vxlan_global_config|to_json }}'
   NetworkNexusHostKeyChecks: '{{ network_nexus_host_key_checks|to_json }}'
+  NeutronNetworkVLANRanges: 'datacentre:2000:2500'
 
   NeutronMechanismDrivers: '{{ neutron_mechanism_drivers }}'
   NetworkNexusVxlanVniRanges: '0:0'
   NetworkNexusVxlanMcastRanges: '0.0.0.0:0.0.0.0'
-
-  #  NetworkNexusPortMappings: {
-  #    "84:b8:02:5c:00:7b": "1/30",
-  #    "84:b8:02:5c:14:03": "1/31"
-  #  }
