--- a/osp7_installer/conf_common/sj.conf
+++ b/osp7_installer/conf_common/sj.conf
@@ -5,6 +5,9 @@
 ;proxy_host = proxy-rtp-1.cisco.com
 ;proxy_port = 8080
 
+# disable yum proxy
+use_yum_proxy = false
+
 proxy_host = proxy.esl.cisco.com
 proxy_port = 80
 proxy = http://%(proxy_host)s:%(proxy_port)s
