Minor code cleanup
Removed dead code
added 'ignore_error' option to steps
Removed test-data step that fails after the GA release (no default network now)

--- a/osp7_installer/conf_common/base.conf
+++ b/osp7_installer/conf_common/base.conf
@@ -1,5 +1,6 @@
 [DEFAULT]
 skip = False
+ignore_errors = false
 
 #example step, used for printing vars
 [example]
@@ -10,6 +11,7 @@ skip = False
 
 [rhel_unregister]
 playbook = rhel-unregister.yml
+ignore_errors = true
 
 [ansible]
 playbook = osp-director.yml
@@ -56,6 +58,7 @@ neutron_mechanism_drivers = openvswitch,cisco_nexus
 networking_cisco_rpm_url = http://memory.cisco.com/osp7/rpms/rh/python-networking-cisco-2015.1.0-2.el7ost.noarch.rpm
 ucs_sdk_rpm_url = http://memory.cisco.com/osp7/rpms/rh/python-UcsSdk-0.8.2.5-1.el7ost.noarch.rpm
 tripleo_heat_rpm_url = http://memory.cisco.com/osp7/rpms/rh/openstack-tripleo-heat-templates-0.8.6-46.el7ost.noarch.rpm
+;tripleo_heat_rpm_url = http://memory.cisco.com/osp7/rpms/rh/testing/openstack-tripleo-heat-templates-0.8.6-53.el7ost.noarch.rpm
 
 puppet_neutron_ref = refs/changes/81/197181/17
 
@@ -73,17 +76,16 @@ puppet_elements_ref = refs/changes/72/188772/1
 
 # RPMs for overcloud-full.qcow2
 rpm_base_url = http://memory.cisco.com/osp7/rpms/rh
-;rpms_for_image = "%(rpm_base_url)s/python-UcsSdk-0.8.2.5-1.el7ost.noarch.rpm" \
-;                 "%(rpm_base_url)s/python-lxml-3.2.1-5.el7_1.x86_64.rpm" \
-;                 "%(rpm_base_url)s/openstack-puppet-modules-2015.1.8-12.el7ost.noarch.rpm" \
-;                 "%(rpm_base_url)s/openstack-tripleo-puppet-elements-0.0.1-5.el7ost.noarch.rpm" \
-;                 "%(rpm_base_url)s/python-networking-cisco-2015.1.0-2.el7ost.noarch.rpm"
 
-rpms_for_image = "%(rpm_base_url)s/python-UcsSdk-0.8.2.5-1.el7ost.noarch.rpm" \
-                 "%(rpm_base_url)s/python-networking-cisco-2015.1.0-2.el7ost.noarch.rpm" \
-                 "%(rpm_base_url)s/openstack-puppet-modules-2015.1.8-14.el7ost.noarch.rpm"
+# working RPMs before update to newer list
+;rpms_for_image = "http://memory.cisco.com/osp7/ftp-mirror/rhel-7-server-openstack-7.0-rpms/Packages/python-UcsSdk-0.8.2.5-1.el7ost.noarch.rpm" \
+;                 "http://memory.cisco.com/osp7/ftp-mirror/rhel-7-server-openstack-7.0-rpms/Packages/python-networking-cisco-2015.1.0-2.el7ost.noarch.rpm" \
+;                 "%(rpm_base_url)s/openstack-puppet-modules-2015.1.8-14.el7ost.noarch.rpm"
 
-;                 "%(rpm_base_url)s/python-lxml-3.2.1-5.el7_1.x86_64.rpm" \
+rpms_for_image = "http://memory.cisco.com/osp7/ftp-mirror/rhel-7-server-openstack-7.0-rpms/Packages/python-UcsSdk-0.8.2.5-1.el7ost.noarch.rpm" \
+                 "http://memory.cisco.com/osp7/rpms/rh/testing/python-networking-cisco-2015.1.0-3.el7ost.noarch.rpm" \
+                 "http://memory.cisco.com/osp7/rpms/rh/testing/openstack-puppet-modules-2015.1.8-15.el7ost.noarch.rpm" \
+                 "http://memory.cisco.com/osp7/rpms/rh/testing/python-lxml-3.2.1-5.el7ost.x86_64.rpm"
 
 # default heat config
 network_ucsm_ip = 127.0.0.1
