--- a/osp7_installer/ansible/roles/osp-test-data/tasks/main.yml
+++ b/osp7_installer/ansible/roles/osp-test-data/tasks/main.yml
@@ -42,16 +42,17 @@
         --disk-format=qcow2 < /home/stack/cirros-0.3.4-x86_64-disk.img
   when: cirros_image_downloaded|success
 
-- name: Create Test VM
-  sudo_user: stack
-  shell: >
-        source /home/stack/overcloudrc &&
-        default_net=$(neutron net-list --quote minimal --format csv -c id -c name | grep default-net | sed 's_,.*__') &&
-        nova --os-tenant-name test-project
-        --os-user-name test-user
-        --os-password password boot cirros-test
-        --flavor m1.tiny
-        --image 'cirros 0.3.4'
-        --security-groups default
-        --nic net-id=$default_net
-        --key_name default_key
+# default-net is no longer created
+#- name: Create Test VM
+#  sudo_user: stack
+#  shell: >
+#        source /home/stack/overcloudrc &&
+#        default_net=$(neutron net-list --quote minimal --format csv -c id -c name | grep default-net | sed 's_,.*__') &&
+#        nova --os-tenant-name test-project
+#        --os-user-name test-user
+#        --os-password password boot cirros-test
+#        --flavor m1.tiny
+#        --image 'cirros 0.3.4'
+#        --security-groups default
+#        --nic net-id=$default_net
+#        --key_name default_key
