--- a/osp7_installer/conf_common/base.conf
+++ b/osp7_installer/conf_common/base.conf
@@ -57,21 +57,21 @@ neutron_mechanism_drivers = openvswitch,cisco_nexus
 # TODO clean up: using a mix of git patches and RPM's
 networking_cisco_rpm_url = http://memory.cisco.com/osp7/rpms/rh/python-networking-cisco-2015.1.0-2.el7ost.noarch.rpm
 ucs_sdk_rpm_url = http://memory.cisco.com/osp7/rpms/rh/python-UcsSdk-0.8.2.5-1.el7ost.noarch.rpm
-;tripleo_heat_rpm_url = http://memory.cisco.com/osp7/rpms/rh/openstack-tripleo-heat-templates-0.8.6-46.el7ost.noarch.rpm
-tripleo_heat_rpm_url = http://memory.cisco.com/osp7/rpms/rh/testing/openstack-tripleo-heat-templates-0.8.6-62.el7ost.noarch.rpm
-
+tripleo_heat_rpm_url = http://memory.cisco.com/osp7/ftp-mirror/rhel-7-server-openstack-7.0-director-rpms/Packages/openstack-tripleo-heat-templates-0.8.6-45.el7ost.noarch.rpm
 
 puppet_neutron_ref = refs/changes/81/197181/17
 
-heat_templates_ref_1 = refs/changes/54/198754/12
-# https://review.openstack.org/#/c/198754
-heat_templates_ref_2 = refs/changes/49/214649/3
-# https://review.openstack.org/#/c/214649
-heat_templates_ref_3 = refs/changes/94/215694/6
-# https://review.openstack.org/#/c/215694
-heat_templates_ref_4 = refs/changes/40/214740/10
-# https://review.openstack.org/#/c/214740
 
+heat_templates_ref_1 = refs/changes/49/214649/3
+# https://review.openstack.org/#/c/214649 - Consume the NeutronMechanismDrivers from the hiera data
+heat_templates_ref_2 = refs/changes/54/198754/15
+# https://review.openstack.org/#/c/198754 - Enable Cisco Nexus and UCSM plugins
+heat_templates_ref_3 = refs/changes/40/214740/13
+# https://review.openstack.org/#/c/214740 - Add "AllNodes" ExtraConfig interface
+heat_templates_ref_4 = refs/changes/94/215694/14
+# https://review.openstack.org/#/c/215694 - Port Cisco Nexus/UCSM ExtraConfig to AllNodes
+heat_templates_ref_5 = refs/changes/71/223271/4
+# https://review.openstack.org/#/c/223271 - Support new form of servers config for ML2 cisco nexus allnodes config.
 
 puppet_elements_ref = refs/changes/72/188772/1
 
