Updating to support osp7 y1 2015-09-18.1

--- a/osp7_installer/ansible/roles/osp-director/tasks/main.yml
+++ b/osp7_installer/ansible/roles/osp-director/tasks/main.yml
@@ -31,8 +31,8 @@
 - name: Install python-rdomanager-oscplugin
   yum: name=python-rdomanager-oscplugin
 
-- name: openstack-tripleo-heat-templates rpm
-  shell: rpm -Uvh --force {{ tripleo_heat_rpm_url }}
+#- name: openstack-tripleo-heat-templates rpm
+#  shell: rpm -Uvh --force {{ tripleo_heat_rpm_url }}
 
 - name: Create Stack user
   # password=password
