--- a/osp7_installer/ansible/roles/osp-overcloud/tasks/main.yml
+++ b/osp7_installer/ansible/roles/osp-overcloud/tasks/main.yml
@@ -101,6 +101,7 @@
         --hypervisor-neutron-public-interface {{ hypervisor_neutron_public_nic }}
         -e /usr/share/openstack-tripleo-heat-templates/overcloud-resource-registry-puppet.yaml
         -e /home/stack/templates/networking-cisco-environment.yaml
+        --neutron-tunnel-type vlan
   # up to 2 hours poll every minute
   async: 7200
   poll: 60
