Set overcloud image password all the time, and allow for password ssh (both for test access only)
Also write tempest.conf file so we can run the cert tests directly

--- a/osp7_installer/conf_common/base.conf
+++ b/osp7_installer/conf_common/base.conf
@@ -19,10 +19,9 @@ playbook = osp-director.yml
 node_discovery = true
 deploy_overcloud = true
 deploy_undercloud = true
-override_qcow = true
+override_qcow = false
 
 osp_use_partner_repo = true
-override_qcow = false
 
 proxy_env = {}
 
@@ -35,10 +34,6 @@ yum_timeout = 120
 
 yum_repos = [{ 'name': 'osp7y1.repo', 'url': 'http://memory.cisco.com/osp7/ftp-mirror/y1-2015-09-18.1/osp7y1-director.repo' },
             { 'name': 'osp7y1-director.repo', 'url': 'http://memory.cisco.com/osp7/ftp-mirror/y1-2015-09-18.1/y1-2015-09-18.1.repo' } ]
-
-;disk_images = [{ 'url': '%(image_base_url)s/deploy-ramdisk-ironic-7.0.0-32.tar', 'name': 'deploy-ramdisk-ironic.tar' },
-;              { 'url': '%(image_base_url)s/discovery-ramdisk-7.0.0-32.tar', 'name': 'discovery-ramdisk.tar' },
-;              { 'url': '%(image_base_url)s/overcloud-full-7.0.0-32.tar', 'name': 'overcloud-full.tar' }]
 
 disk_images = [{ 'url': '%(image_base_url)s/deploy-ramdisk-ironic.tar', 'name': 'deploy-ramdisk-ironic.tar' },
               { 'url': '%(image_base_url)s/discovery-ramdisk.tar', 'name': 'discovery-ramdisk.tar' },
@@ -66,31 +61,15 @@ tripleo_heat_rpm_url = http://memory.cisco.com/osp7/ftp-mirror/rhel-7-server-ope
 puppet_neutron_ref = refs/changes/81/197181/17
 
 
-heat_templates_ref_1 = refs/changes/49/214649/3
-# https://review.openstack.org/#/c/214649 - Consume the NeutronMechanismDrivers from the hiera data
-heat_templates_ref_2 = refs/changes/54/198754/15
-# https://review.openstack.org/#/c/198754 - Enable Cisco Nexus and UCSM plugins
-heat_templates_ref_3 = refs/changes/40/214740/13
-# https://review.openstack.org/#/c/214740 - Add "AllNodes" ExtraConfig interface
-heat_templates_ref_4 = refs/changes/94/215694/14
-# https://review.openstack.org/#/c/215694 - Port Cisco Nexus/UCSM ExtraConfig to AllNodes
-heat_templates_ref_5 = refs/changes/71/223271/4
-# https://review.openstack.org/#/c/223271 - Support new form of servers config for ML2 cisco nexus allnodes config.
+heat_templates_ref_1 = refs/changes/50/226550/2
+# https://review.openstack.org/#/c/226550 - Remove nameserver lookup dependency from Cisco ML2 CollectMacConfig.
 
 puppet_elements_ref = refs/changes/72/188772/1
 
 # RPMs for overcloud-full.qcow2
 rpm_base_url = http://memory.cisco.com/osp7/rpms/rh
 
-# working RPMs before update to newer list
-;rpms_for_image = "http://memory.cisco.com/osp7/ftp-mirror/rhel-7-server-openstack-7.0-rpms/Packages/python-UcsSdk-0.8.2.5-1.el7ost.noarch.rpm" \
-;                 "http://memory.cisco.com/osp7/ftp-mirror/rhel-7-server-openstack-7.0-rpms/Packages/python-networking-cisco-2015.1.0-2.el7ost.noarch.rpm" \
-;                 "%(rpm_base_url)s/openstack-puppet-modules-2015.1.8-14.el7ost.noarch.rpm"
-
-rpms_for_image = "http://memory.cisco.com/osp7/ftp-mirror/rhel-7-server-openstack-7.0-rpms/Packages/python-UcsSdk-0.8.2.5-1.el7ost.noarch.rpm" \
-                 "http://memory.cisco.com/osp7/rpms/rh/python-networking-cisco-2015.1.0-4.el7ost.noarch.rpm" \
-                 "http://memory.cisco.com/osp7/rpms/rh/openstack-puppet-modules-2015.1.8-17.el7ost.noarch.rpm" \
-                 "http://memory.cisco.com/osp7/rpms/rh/testing/python-lxml-3.2.1-5.el7ost.x86_64.rpm"
+rpms_for_image = ""
 
 
 # default heat config
