--- a/osp7_installer/ansible/roles/rh-os-cert-server/tasks/main.yml
+++ b/osp7_installer/ansible/roles/rh-os-cert-server/tasks/main.yml
@@ -28,3 +28,6 @@
 
 - name: test_config.json
   template: src=test_config.json dest=/etc/redhat-certification-openstack/test_config.json mode=644
+
+- name: Write tempest.conf
+  shell: cd /usr/share/openstack-tempest-kilo && python tools/config_tempest.py --image "http://download.cirros-cloud.net/0.3.3/cirros-0.3.3-x86_64-disk.img" --create identity.uri {{ hostvars[director_node_ssh_ip]['overcloud_os_auth_url'] }} identity.username demo identity.password demo identity.auth_version v2 identity.tenant_name demo identity.admin_domain_name Default auth.allow_tenant_isolation True auth.tempest_roles _member_ network.ipv6 true network.ipv6_subnet_attributes true compute-feature-enabled.live_migration false identity.admin_username admin identity.admin_password {{ hostvars[director_node_ssh_ip]['overcloud_os_admin_password'] }} --out /etc/redhat-certification-openstack/tempest.conf
