--- a/osp7_installer/conf_common/base.conf
+++ b/osp7_installer/conf_common/base.conf
@@ -90,6 +90,8 @@ network_nexus_rovider_vlan_auto_trunk = true
 network_nexus_vxlan_global_config = true
 network_nexus_host_key_checks = false
 
+network_nexus_vlan_range = datacentre:2000:2500
+
 # which nic to use on the overcloud
 single_nic = eth0
 compute_bridge_nic = %(single_nic)s
