Setting workers to 0 and a couple other minor tweaks needed to run the tests

--- a/osp7_installer/ansible/roles/osp-overcloud/templates/networking-cisco-environment.yaml
+++ b/osp7_installer/ansible/roles/osp-overcloud/templates/networking-cisco-environment.yaml
@@ -25,3 +25,9 @@ parameter_defaults:
   NeutronMechanismDrivers: '{{ neutron_mechanism_drivers }}'
   NetworkNexusVxlanVniRanges: '0:0'
   NetworkNexusVxlanMcastRanges: '0.0.0.0:0.0.0.0'
+
+parameters:
+  controllerExtraConfig:
+    neutron::server::api_workers: 0
+    neutron::agents::metadata::metadata_workers: 0
+    neutron::server::rpc_workers: 0
