--- a/osp7_installer/ansible/roles/rh-os-cert-client/tasks/main.yml
+++ b/osp7_installer/ansible/roles/rh-os-cert-client/tasks/main.yml
@@ -15,3 +15,6 @@
 
 - name: Start rhcert-backend
   service: name=rhcert-backend state=started
+
+# now run something like:
+# python -c 'from  rhcert.suites.openstack.openstack import *; run("/tmp/bdemers")'
