correcting RPM repo URL

--- a/osp7_installer/conf_common/base.conf
+++ b/osp7_installer/conf_common/base.conf
@@ -33,7 +33,7 @@ image_base_url = http://memory.cisco.com/osp7/rh-images/y1
 yum_timeout = 120
 
 yum_repos = [{ 'name': 'osp7y1.repo', 'url': 'http://memory.cisco.com/osp7/ftp-mirror/y1-2015-09-18.1/osp7y1-director.repo' },
-            { 'name': 'osp7y1-director.repo', 'url': 'http://memory.cisco.com/osp7/ftp-mirror/y1-2015-09-18.1/y1-2015-09-18.1.repo' } ]
+            { 'name': 'osp7y1-director.repo', 'url': 'http://memory.cisco.com/osp7/ftp-mirror/y1-2015-09-18.1/osp7y1.repo' } ]
 
 disk_images = [{ 'url': '%(image_base_url)s/deploy-ramdisk-ironic.tar', 'name': 'deploy-ramdisk-ironic.tar' },
               { 'url': '%(image_base_url)s/discovery-ramdisk.tar', 'name': 'discovery-ramdisk.tar' },
@@ -76,7 +76,7 @@ rpms_for_image = ""
 network_ucsm_ip = 127.0.0.1
 network_ucsm_username = admin
 network_ucsm_password = password
-network_ucsm_host_list = host1:profile1, host2:profile2
+network_ucsm_host_list = mac1:profile1, mac2:profile2
 network_nexus_config = {}
 network_nexus_managed_physical_network = datacentre
 network_nexus_vlan_name_prefix = q-
