correcting internal .repo file names

--- a/osp7_installer/conf_common/base.conf
+++ b/osp7_installer/conf_common/base.conf
@@ -32,8 +32,8 @@ image_base_url = http://memory.cisco.com/osp7/rh-images/y1
 
 yum_timeout = 120
 
-yum_repos = [{ 'name': 'osp7y1.repo', 'url': 'http://memory.cisco.com/osp7/ftp-mirror/y1-2015-09-18.1/osp7y1-director.repo' },
-            { 'name': 'osp7y1-director.repo', 'url': 'http://memory.cisco.com/osp7/ftp-mirror/y1-2015-09-18.1/osp7y1.repo' } ]
+yum_repos = [{ 'name': 'osp7y1-director.repo', 'url': 'http://memory.cisco.com/osp7/ftp-mirror/y1-2015-09-18.1/osp7y1-director.repo' },
+            { 'name': 'osp7y1.repo', 'url': 'http://memory.cisco.com/osp7/ftp-mirror/y1-2015-09-18.1/osp7y1.repo' } ]
 
 disk_images = [{ 'url': '%(image_base_url)s/deploy-ramdisk-ironic.tar', 'name': 'deploy-ramdisk-ironic.tar' },
               { 'url': '%(image_base_url)s/discovery-ramdisk.tar', 'name': 'discovery-ramdisk.tar' },
