--- a/osp7_installer/ansible/roles/osp-overcloud/tasks/main.yml
+++ b/osp7_installer/ansible/roles/osp-overcloud/tasks/main.yml
@@ -19,7 +19,7 @@
 #    - { template_file: 'controller.yaml' }
 #    - { template_file: 'compute.yaml' }
 
-- name:  Write {{ item.template_file }}
+- name:  Write environment files
   template: src={{ item.template_file }} dest=/home/stack/templates/{{ item.template_file }} owner=stack group=stack
   with_items:
 #    - { template_file: 'network-environment.yaml' }
@@ -103,6 +103,7 @@
         -e /home/stack/templates/networking-cisco-environment.yaml
         --neutron-tunnel-type vlan
         --neutron-network-vlan-ranges {{ network_nexus_vlan_range }}
+        --ntp-server 1.ntp.esl.cisco.com
   # up to 2 hours poll every minute
   async: 7200
   poll: 60
