--- a/osp7_installer/conf_common/base.conf
+++ b/osp7_installer/conf_common/base.conf
@@ -13,8 +13,14 @@ ignore_errors = false
 playbook = rhel-unregister.yml
 ignore_errors = true
 
+[redeploy]
+playbook = overcloud-delete.yml
+
 [ansible]
 playbook = osp-director.yml
+nfs_server_daemon = nfs-server
+
+nfs_exports = [ "/export/cinder *(rw,sync,no_root_squash)", "/export/glance *(rw,sync,no_root_squash)" ]
 
 node_discovery = true
 deploy_overcloud = true
