--- a/osp7_installer/ansible/roles/rh-os-cert/tasks/main.yml
+++ b/osp7_installer/ansible/roles/rh-os-cert/tasks/main.yml
@@ -44,8 +44,8 @@
         network.ipv6 true
         network.ipv6_subnet_attributes true
         compute-feature-enabled.live_migration false
-        identity.admin_username admin i
-        dentity.admin_password {{ hostvars[director_node_ssh_ip]['overcloud_os_admin_password'] }}
+        identity.admin_username admin
+        identity.admin_password {{ hostvars[director_node_ssh_ip]['overcloud_os_admin_password'] }}
         --out /etc/redhat-certification-openstack/tempest.conf
 
 - name: rhcert-backend init.d script
