Added back missing rhcert-backend template
Other minor ansible updates to attempt to get quick sanity test to run automatically.

--- a/osp7_installer/ansible/roles/osp-overcloud/tasks/main.yml
+++ b/osp7_installer/ansible/roles/osp-overcloud/tasks/main.yml
@@ -131,6 +131,7 @@
         grep -q ext-subnet ||
         neutron subnet-create
         --name ext-subnet
+        --disable-dhcp
         --allocation-pool start={{ overcloud_floating_ip_start }},end={{ overcloud_floating_ip_end }}
         --gateway={{ overcloud_bm_network_gateway }}
         ext-net {{ overcloud_floating_ip_cidr }}
