Changes to support mulitple 'action' types (deploy, redeploy, test) switched to just running tempest (so horizon can stay running)

--- a/osp7_installer/ansible/overcloud-redeploy.yml
+++ b/osp7_installer/ansible/overcloud-redeploy.yml
@@ -2,11 +2,7 @@
 - hosts: "{{ director_node_ssh_ip }}"
   connection: ssh
   roles:
-    - etc-hosts
-    - osp-director
-    - nfs-shares
-    - geerlingguy.nfs
-    - osp-prep-for-overcloud
+    - delete-overcloud
     - osp-overcloud
     - osp-test-data
     - add-overcloud-host
