--- a/osp7_installer/ansible/roles/rh-tempest/tasks/main.yml
+++ b/osp7_installer/ansible/roles/rh-tempest/tasks/main.yml
@@ -5,31 +5,13 @@
   get_url: url={{ item.url }} dest=/etc/yum.repos.d/{{ item.name }} force=true
   with_items: "{{ cert_yum_repos }}"
 
-- name: remove the openstack-dashboard
-  yum: name=openstack-dashboard state=absent
+- name: Create dir for tempest.conf
+  file: path=/etc/redhat-certification-openstack state=directory mode=0755
 
-- name: remove horizon_vhost.conf
-  file: path=/etc/httpd/conf.d/10-horizon_vhost.conf state=absent
-  register: horizon_vhost_removed
-
-- name: restart httpd
-  shell: "systemctl daemon-reload && systemctl restart httpd"
-  when: horizon_vhost_removed.changed
-
-- name: install certification rpms
+- name: install tempest rpms
   yum: name={{ item.name }}
   with_items:
-    - { name: "redhat-certification" }
-    - { name: "redhat-certification-openstack" }
-
-- name: copy cert config
-  shell: cp /etc/rhcert-default.xml /etc/rhcert.xml
-
-- name: restart httpd (again)
-  service: name=httpd state=reloaded
-
-- name: test_config.json
-  template: src=test_config.json dest=/etc/redhat-certification-openstack/test_config.json mode=644
+    - { name: "openstack-tempest" }
 
 - name: Write tempest.conf
   shell: >
@@ -49,12 +31,6 @@
         identity.admin_username admin
         identity.admin_password {{ hostvars[director_node_ssh_ip]['overcloud_os_admin_password'] }}
         --out /etc/redhat-certification-openstack/tempest.conf
-
-- name: rhcert-backend init.d script
-  template: src=rhcert-backend dest=/etc/init.d/rhcert-backend mode=755
-
-- name: Start rhcert-backend
-  service: name=rhcert-backend state=started
 
 - name: Run quick network sanity test (tempest)
   shell: cd /usr/share/openstack-tempest-kilo && ./run_tempest.sh -N -- 'test_connectivity_between_vms_on_different_networks' --config /etc/redhat-certification-openstack/tempest.conf
