Changes to bootstrap for BXB lab

--- a/osp7_installer/ansible/roles/osp-director/tasks/main.yml
+++ b/osp7_installer/ansible/roles/osp-director/tasks/main.yml
@@ -12,12 +12,12 @@
   when: osp_use_partner_repo
 
 # set proxy via kickstart
-- name: Set yum proxy
-  shell: 'grep -q "proxy=" /etc/yum.conf || echo "proxy={{ proxy }}" >> /etc/yum.conf'
-  when: use_yum_proxy
+#- name: Set yum proxy
+#  shell: 'grep -q "proxy=" /etc/yum.conf || echo "proxy={{ proxy }}" >> /etc/yum.conf'
+#  when: use_yum_proxy
 
-- name: Set yum timeout
-  shell: 'grep -q "timeout=" /etc/yum.conf || echo "timeout={{ yum_timeout }}" >> /etc/yum.conf'
+#- name: Set yum timeout
+#  shell: 'grep -q "timeout=" /etc/yum.conf || echo "timeout={{ yum_timeout }}" >> /etc/yum.conf'
 
 - name: yum update (the world)
   yum: name=* state=latest update_cache=yes
