--- a/osp7_installer/conf_common/bxb.conf
+++ b/osp7_installer/conf_common/bxb.conf
@@ -1,8 +1,15 @@
 [DEFAULT]
-proxy = http://proxy.esl.cisco.com:80
+proxy_host = proxy.esl.cisco.com
+proxy_port = 80
+proxy = http://%(proxy_host)s:%(proxy_port)s
+
+[cobbler]
+cobbler_api_url = http://10.86.7.58/cobbler_api
+cobbler_username = cobbler
+cobbler_password = cobbler
+
 
 [ansible]
-proxy_env = { 'ftp_proxy':   "%(proxy)s",
-              'http_proxy':  "%(proxy)s",
+proxy_env = { 'http_proxy':  "%(proxy)s",
               'https_proxy': "%(proxy)s"}
 ;TODO: set no_proxy
