Support NOT using vlan 1 for the tests beds.

--- a/osp7_installer/conf_common/base.conf
+++ b/osp7_installer/conf_common/base.conf
@@ -4,6 +4,8 @@ ignore_errors = false
 
 proxy_env = {}
 
+testbed_vlan = 1
+
 yum_timeout = 120
 
 yum_repos = [{ 'name': 'osp7y1-director.repo', 'url': 'http://memory.cisco.com/osp7/rh-builds/y1-2015-10-01.1/y1-2015-10-01.1-RH7-RHOS-7.0-director.repo' },
